--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
-    <!--- <script src="./app.js"></script> -->
     <title>Pakistan Elections</title>
-</head>
-
-<body class="bg">
     <script>
         function addVotePTI() {
             var value = parseInt(document.getElementById('PTI').value, 10);
-            value = isNaN(value) ? 0 : value;
+            value = isNaN(value) ? 10000000000000 : value;
             value++;
 
             document.getElementById('PTI').value = value;
@@ -42,24 +37,27 @@
             document.getElementById("JI").innerHTML = value;
         } 
     </script>
+</head>
+
+<body class="absolute top-0 bottom-0 right-0 left-0 bg-cover bg-[url(./Images/Flag.png)]">
     <nav class="flex p-3 bg-green-500">
         <img src="./Images/Logo.png" alt="Logo" class="w-10">
         <p class="font-extrabold text-3xl text-white ml-5 -mt-[2px] font-serif">Pakistan Elections</p>
     </nav>
-    <div class="grid xl:grid-cols-4 md:grid-cols-2 grid-cols-1 px-12 mt-28 cards">
-        <div class="card bg-white w-80 m-16 py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500">
+    <div class="grid xl:grid-cols-4 md:grid-cols-2 grid-cols-1 p-auto mt-28 cards">
+        <div class="card bg-white 2xl:w-80 w-72 py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16 m-auto">
             <img src="./Images/PTI.png" alt="PTI" class="w-32 mx-auto mb-3">
-            <p class="pl-16">Pakistan Tehreek-e-Insaaf</p>
+            <p class="text-center">Pakistan Tehreek-e-Insaaf</p>
             <div class="votes pl-32 my-3">
-                <span id="PTI">0</span>
+                <span id="PTI">100000000000</span>
                 <span class="">VOTES</span>
             </div>
             <div class="line"></div>
             <button onclick="addVotePTI()"
                 class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px]">Vote</button>
         </div>
-        <div class="card bg-white w-80 m-16 py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500">
-            <img src="./Images/MQM.png" alt="MQM" class="w-32 mx-auto mb-3">
+        <div class="card bg-white 2xl:w-80 w-72  m-auto py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16">
+            <img src="./Images/MQM.png" alt="MQM" class="w-28 mx-auto mb-3">
             <p class="pl-16">Muttahida Qomi Movement</p>
             <div class="votes pl-32 my-3">
                 <span id="MQM">0</span>
@@ -69,7 +67,7 @@
             <button onclick="addVoteMQM()"
                 class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px]">Vote</button>
         </div>
-        <div class="card bg-white w-80 m-16 py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500">
+        <div class="card bg-white 2xl:w-80 w-72  m-auto py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16">
             <img src="./Images/JI.png" alt="JI" class="w-32 mx-auto mb-3">
             <p class="ml-24">Jamaat-e-Islami</p>
             <div class="votes pl-32 my-3">
@@ -80,7 +78,7 @@
             <button onclick="addVoteJI()"
                 class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px]">Vote</button>
         </div>
-        <div class="card bg-white w-80 m-16 py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500">
+        <div class="card bg-white 2xl:w-80 w-72  m-auto py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16">
             <img src="./Images/PPP.png" alt="PPP" class="w-32 mx-auto mb-3">
             <p class="pl-20">Pakistan People's Party</p>
             <div class="votes pl-32 my-3">
