--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script>
         function addVotePTI() {
             var value = parseInt(document.getElementById('PTI').value, 10);
-            value = isNaN(value) ? 10000000000000 : value;
+            value = isNaN(value) ? 10000000 : value;
             value++;
 
             document.getElementById('PTI').value = value;
@@ -41,52 +41,52 @@
 
 <body class="absolute top-0 bottom-0 right-0 left-0 bg-cover bg-[url(./Images/Flag.png)]">
     <nav class="flex p-3 bg-green-500">
-        <img src="./Images/Logo.png" alt="Logo" class="w-10">
-        <p class="font-extrabold text-3xl text-white ml-5 -mt-[2px] font-serif">Pakistan Elections</p>
+        <img src="./Images/Logo.png" alt="Logo" class="sm:w-10 w-7 h-7 sm:h-10">
+        <p class="font-semibold sm:font-extrabold sm:text-3xl text-white ml-5 my-auto font-serif text-md">Pakistan Elections</p>
     </nav>
     <div class="grid xl:grid-cols-4 md:grid-cols-2 grid-cols-1 p-auto mt-28 cards">
         <div class="card bg-white 2xl:w-80 w-72 py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16 m-auto">
             <img src="./Images/PTI.png" alt="PTI" class="w-32 mx-auto mb-3">
             <p class="text-center">Pakistan Tehreek-e-Insaaf</p>
-            <div class="votes pl-32 my-3">
-                <span id="PTI">100000000000</span>
+            <div class="my-3 text-center">
+                <span id="PTI">10000000</span>
                 <span class="">VOTES</span>
             </div>
             <div class="line"></div>
             <button onclick="addVotePTI()"
-                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px]">Vote</button>
+                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl 2xl:ml-[97px] ml-[81px]">Vote</button>
         </div>
         <div class="card bg-white 2xl:w-80 w-72  m-auto py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16">
             <img src="./Images/MQM.png" alt="MQM" class="w-28 mx-auto mb-3">
-            <p class="pl-16">Muttahida Qomi Movement</p>
-            <div class="votes pl-32 my-3">
+            <p class="text-center">Muttahida Qomi Movement</p>
+            <div class="text-center my-3">
                 <span id="MQM">0</span>
                 <span class="">VOTES</span>
             </div>
             <div class="line"></div>
             <button onclick="addVoteMQM()"
-                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px]">Vote</button>
+                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl 2xl:ml-[97px] ml-[81px]">Vote</button>
         </div>
         <div class="card bg-white 2xl:w-80 w-72  m-auto py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16">
             <img src="./Images/JI.png" alt="JI" class="w-32 mx-auto mb-3">
-            <p class="ml-24">Jamaat-e-Islami</p>
-            <div class="votes pl-32 my-3">
+            <p class="text-center">Jamaat-e-Islami</p>
+            <div class="text-center my-3">
                 <span id="JI">0</span>
                 <span class="">VOTES</span>
             </div>
             <div class="line"></div>
             <button onclick="addVoteJI()"
-                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px]">Vote</button>
+                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl 2xl:ml-[97px] ml-[81px]">Vote</button>
         </div>
         <div class="card bg-white 2xl:w-80 w-72  m-auto py-10 rounded-xl hover:scale-125 hover:rounded-2xl duration-500 h-[22rem] mb-16">
             <img src="./Images/PPP.png" alt="PPP" class="w-32 mx-auto mb-3">
-            <p class="pl-20">Pakistan People's Party</p>
-            <div class="votes pl-32 my-3">
+            <p class="text-center">Pakistan People's Party</p>
+            <div class="text-center my-3">
                 <span id="PPP">0</span>
                 <span class="">VOTES</span>
             </div>
             <button onclick="addVotePPP()"
-                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl ml-[94px] btn">Vote</button>
+                class="bg-green-800 px-10 py-3 text-white font-semibold text-2xl hover:text-green-700 hover:bg-black duration-200 rounded-xl 2xl:ml-[97px] ml-[81px] btn">Vote</button>
         </div>
     </div>
 </body>
